--- a/index.html
+++ b/index.html
@@ -1778,7 +1778,7 @@ async function openAdminPanel() {
                     item.targetEndDate || '',   
                     item.actualStartDate || '', 
                     item.actualEndDate || '',
-					item.insertionOrderNumber
+					item.insertionOrderNumber,
                     item.executor, 
                     item.reviewer, 
                     item.result, 
@@ -1815,6 +1815,7 @@ async function openAdminPanel() {
     </script>
 </body>
 </html>
+
 
 
 
