--- a/index.html
+++ b/index.html
@@ -984,6 +984,7 @@ function collectFormData() {
             // 【新增這行】讓 saveChecklist 可以讀取使用者手動輸入的檢核人名稱
             reviewer: form.elements.reviewer.value || '', 
             // 收集檢核人備註和結果
+	    reviewerEmail: userEmail,
             reviewNotes: form.elements.reviewNotes.value || '',
             result: form.elements.result.value || 'pass',
             // 收集 actual... 欄位（如果在檢核模式下允許修改）
@@ -1815,3 +1816,9 @@ async function openAdminPanel() {
     </script>
 </body>
 </html>
+
+
+
+
+
+
