--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         </tr>
 
         		    <tr id="row-totalBudget">
-          		      <td class="font-medium text-gray-700 is-required">廣告總預算</td>
+          		      <td class="font-medium text-gray-700">廣告總預算</td>
              		   <td>
               		      <label class="block text-xs font-semibold mb-1">合約總額或活動預算總額</label>
                     <span class="text-gray-400 text-xs">（請填寫必填欄位）</span>
@@ -1821,4 +1821,5 @@ async function openAdminPanel() {
     </script>
 </body>
 </html>
+
 
